crates/openracing-ffb/tests/snapshots/snapshot_tests__sine_effect_typical.snap
---
source: crates/openracing-ffb/tests/snapshot_tests.rs
expression: effect
---
{
  "params": {
    "effect_type": "Sine",
    "duration_ms": 2000,
    "gain": 255,
    "direction": 0
  },
  "frequency_hz": 20.0,
  "phase": 0.0
}
