crates/openracing-ffb/tests/snapshots/snapshot_tests__spring_effect_default.snap
---
source: crates/openracing-ffb/tests/snapshot_tests.rs
expression: "SpringEffect::default()"
---
{
  "params": {
    "effect_type": "None",
    "duration_ms": 0,
    "gain": 0,
    "direction": 0
  },
  "coefficient": 0,
  "offset": 0,
  "deadband": 0
}
